# GesFer.Admin.Back

./: .cursorrules  .gitignore  AGENTS.md  AGENTS.norms.md  GesFer.Admin.Back.rar  README.md  audit_output.txt  audit_report.txt  auditor.sh  docker-compose.test.yml  docker-compose.yml  inventario-script.ps1  plan.md  run_audit.ps1  test.json  test.rs
.cursor/rules/: action-suggestions.mdc  commands-via-skills-tools.mdc  finalizar-proceso.mdc  process-suggestions.mdc  sddia-evolution-sync.mdc  sddia-ssot.mdc  skill-suggestions.mdc  subir-push.mdc
.github/: README.md
.github/workflows/: pr-validation.yml
SddIA/: CONSTITUTION.md  constitution.json  manifesto.json
SddIA/Tokens/: Karma2Token.json  tokens-contract.json
SddIA/actions/: README.md  actions-contract.json  actions-contract.md  clarify.md  execution.md  feature.md  finalize.md  implementation.md  planning.md  sddia-difusion.md  spec.md  validate.md
SddIA/agents/: architect.json  clarifier.json  cumulo.instructions.json  cumulo.json  cumulo.paths.json  frontend-architect.json  infrastructure-architect.json  performance-engineer.json  qa-judge.json  security-engineer.json  tekton-developer.json
SddIA/constitution/: constitution.architect.json  constitution.architect.md  constitution.audity.json  constitution.audity.md  (+4 more)
docs/: EVOLUTION_LOG.md  PROJECT_STATUS.md
scripts/: README-E2E.md  analyze.sh  ejecutar-tests.ps1  validate-nomenclatura.ps1
scripts/gesfer-capsule/: Cargo.toml
scripts/gesfer-capsule/src/: lib.rs
scripts/tools-rs/: Cargo.toml  README.md  install.ps1
scripts/tools-rs/sddia-skills/src/: main.rs
scripts/tools-rs/src/: lib.rs
src/: .gitignore  DOCKER-SETUP.md  Dockerfile  Dockerfile.test  GesFer.Admin.Back.sln  GesFer.Product.sln  TROUBLESHOOTING.md
(+1689 files in other folders)
