[package]
name = "gesfer-capsule"
version = "0.1.0"
edition = "2021"
description = "Envelope JSON compartido skills/tools (SddIA/norms/capsule-json-io.md)"
license = "UNLICENSED"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
atty = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Pipes", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
